# palladium

./: 404.html  index.html
.github/: dependabot.yml
.github/workflows/: nightly.yml  release.yml
architecture/: index.html
code/: Earthfile
code/apps/server/: Cargo.toml
code/apps/server/docker/: Dockerfile
code/apps/server/src/: args.rs  config.rs  error.rs  main.rs  server.rs
code/apps/server/src/handlers/: mappings.rs
code/libs/error/: Cargo.toml
deploy/helm/: Chart.yaml  values.yaml
deploy/helm/templates/server/: deployment.yaml  secret.yaml  service.yaml
docs/wiki/: index.md  retype.yml
docs/wiki/server/endpoints/: index.md
gateway/configuration/: index.html
gateway/downstream-services/: index.html
gateway/endpoints/: index.html
mproc/configuration/: index.html
mproc/downstream-services/: index.html
resources/js/: config.js  search.json
server/endpoints/: index.html
