[package]
name = "palladium-server"
version = "0.0.0"
authors = ["alexander weber <aw@voidpointergroup.com>"]
edition = "2018"

[dependencies]
palladium-error = { path = "../../libs/error" }

ureq = "^2.6"
clap = "^3.2"
chrono = "0.4.19"
futures = "0.3.21"
base64 = "0.13.1"
mongodb = { version = "2.3.1", features = ["tokio-runtime"] }
actix = "0.13.0"
actix-web = "^4.1"
actix-web-actors = "^4.1"
actix-web-httpauth = "0.8.0"
serde_qs = { version = "0.10.1", features = ["actix4"] }
uuid = { version = "^1.1", features = ["v4", "serde"] }
serde = { version = "^1.0", features = ["derive"] }
serde_json = "^1.0"
serde_yaml = "0.8.24"
json = "0.12.4"
